[package]
name = "ccache"
version = "0.1.0"
authors = ["azimut <azimut.github@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0.1"
flate2 = "1.0"